[package]
name = "configurator"
version = "0.1.0"
description = "A small stupid-simple single-layer synchronous serde_json configuration manager"
license-file = "LICENSE"
repository = "https://github.com/MisterSirCode/configurator"
edition = "2024"
exclude = [
    "src/main.rs"
]

[dependencies]
serde_json = "1.0.145"
